--- a/templates/bmc/css/group.css
+++ b/templates/bmc/css/group.css
@@ -11,319 +11,6 @@
 
 	-It should include a bar at the top branded for the HUB
 */
-.hide-text {
-  font: 0/0 a;
-  color: transparent;
-  text-shadow: none;
-  background-color: transparent;
-  border: 0;
-}
-.input-block-level {
-  display: block;
-  width: 100%;
-  min-height: 30px;
-  -webkit-box-sizing: border-box;
-  -moz-box-sizing: border-box;
-  box-sizing: border-box;
-}
-#grid .grid {
-  max-width: 100%;
-  *zoom: 1;
-}
-#grid .grid:before,
-#grid .grid:after {
-  display: table;
-  content: "";
-  line-height: 0;
-}
-#grid .grid:after {
-  clear: left;
-}
-#grid .col {
-  float: left;
-  margin-right: 3.22580645%;
-  *margin-right: 3.17204301%;
-}
-.basicColumn {
-  float: none !important;
-  width: 100% !important;
-  margin-right: 0;
-  margin-bottom: 2em;
-}
-.basicColumn:nth-last-child(1) {
-  margin-bottom: 0;
-}
-.article_separator {
-  display: none;
-}
-.cf:before,
-.cf:after,
-.cf-left:before,
-.cf-left:after,
-.cf-right:before,
-.cf-right:after {
-  display: table;
-  content: "";
-  line-height: 0;
-}
-.cf:after {
-  clear: both;
-}
-.cf-left:after {
-  clear: left;
-}
-.cf-right:after {
-  clear: right;
-}
-.clearfix {
-  border: 1px solid transparent;
-}
-.clearfix:after {
-  content: ".";
-  display: block;
-  height: 0;
-  line-height: 0em;
-  clear: left;
-  visibility: hidden;
-}
-.clear {
-  clear: both;
-}
-.align-right {
-  text-align: right;
-}
-.align-left {
-  text-align: left;
-}
-.align-center {
-  text-align: center;
-}
-img.align-right {
-  float: right;
-  margin: 0 0 1em 1em;
-}
-img.align-left {
-  float: left;
-  margin: 0 1em 1em 0;
-}
-.off,
-.hide {
-  display: none;
-}
-.on,
-.show {
-  display: block;
-}
-.invisible {
-  visibility: hidden;
-}
-.visible {
-  visibility: visible;
-}
-html,
-body,
-div,
-span,
-applet,
-object,
-iframe,
-h1,
-h2,
-h3,
-h4,
-h5,
-h6,
-p,
-blockquote,
-pre,
-a,
-abbr,
-acronym,
-address,
-big,
-cite,
-code,
-del,
-dfn,
-em,
-img,
-ins,
-kbd,
-q,
-s,
-samp,
-small,
-strike,
-strong,
-tt,
-var,
-b,
-u,
-i,
-center,
-dl,
-dt,
-dd,
-ol,
-ul,
-li,
-fieldset,
-form,
-label,
-legend,
-table,
-caption,
-tbody,
-tfoot,
-thead,
-tr,
-th,
-td,
-article,
-aside,
-canvas,
-details,
-embed,
-figure,
-figcaption,
-footer,
-header,
-hgroup,
-menu,
-nav,
-output,
-ruby,
-section,
-summary,
-time,
-mark,
-audio,
-video {
-  margin: 0;
-  padding: 0;
-  border: 0;
-  font-size: 100%;
-  font: inherit;
-  vertical-align: baseline;
-}
-article,
-aside,
-details,
-figcaption,
-figure,
-footer,
-header,
-hgroup,
-nav,
-section,
-main {
-  display: block;
-}
-audio,
-canvas,
-video {
-  display: inline-block;
-  *display: inline;
-  *zoom: 1;
-}
-audio:not([controls]) {
-  display: none;
-}
-html {
-  font-size: 100%;
-  -webkit-text-size-adjust: 100%;
-  -ms-text-size-adjust: 100%;
-}
-a:hover,
-a:active {
-  outline: 0;
-}
-sub,
-sup {
-  position: relative;
-  font-size: 75%;
-  line-height: 0;
-  vertical-align: baseline;
-}
-sup {
-  top: -0.5em;
-}
-sub {
-  bottom: -0.25em;
-}
-img {
-  /* Responsive images (ensure images don't scale beyond their parents) */
-  max-width: 100%;
-  /* Part 1: Set a maxium relative to the parent */
-  /* The following two lines seem to have unintended bad affects in IE 8, 9 */
-  /* width: auto\9; IE7-8 need help adjusting responsive images */
-  /* height: auto; Part 2: Scale the height according to the width, otherwise you get stretching */
-  vertical-align: middle;
-  border: 0;
-  -ms-interpolation-mode: bicubic;
-}
-b,
-strong {
-  font-weight: bold;
-}
-i,
-em {
-  font-style: italic;
-}
-table {
-  max-width: 100%;
-  border-collapse: collapse;
-  border-spacing: 0;
-}
-button,
-input,
-select,
-textarea {
-  margin: 0;
-  font-size: 100%;
-  vertical-align: middle;
-}
-button,
-input {
-  *overflow: visible;
-  line-height: normal;
-}
-button::-moz-focus-inner,
-input::-moz-focus-inner {
-  padding: 0;
-  border: 0;
-}
-button,
-html input[type="button"],
-input[type="reset"],
-input[type="submit"] {
-  -webkit-appearance: button;
-  cursor: pointer;
-}
-label,
-select,
-button,
-input[type="button"],
-input[type="reset"],
-input[type="submit"],
-input[type="radio"],
-input[type="checkbox"] {
-  cursor: pointer;
-}
-input[type="search"] {
-  -webkit-box-sizing: content-box;
-  -moz-box-sizing: content-box;
-  box-sizing: content-box;
-  -webkit-appearance: textfield;
-}
-input[type="search"]::-webkit-search-decoration,
-input[type="search"]::-webkit-search-cancel-button {
-  -webkit-appearance: none;
-}
-textarea {
-  overflow: auto;
-  vertical-align: top;
-}
 html {
   font-family: sans-serif;
   -ms-text-size-adjust: 100%;
@@ -343,20 +30,8 @@ a,
 a:active,
 a:visited {
   text-decoration: none;
-  color: #7c6a85;
+  color: #6E9C39;
 }
-/*
-@fontHeadingsMedium:	"titillium_websemibold", "Helvetica Neue", Helvetica, Arial, sans-serif;
-@fontHeadingsRegular:	"titillium_websemibold", "Helvetica Neue", Helvetica, Arial, sans-serif;
-
-@fontHeadingSubLight:	"titillium_weblight", "Helvetica Neue", Helvetica, Arial, sans-serif;
-
-@fontTextRegular:		"open_sansregular", "Helvetica Neue", Helvetica, Arial, sans-serif;
-@fontTextLight:			"Arial", "Helvetica Neue", Helvetica, Arial, sans-serif;
-
-@fontHomeHero:			"titillium_webthin", "Helvetica Neue", Helvetica, Arial, sans-serif;
-
-*/
 p {
   margin: 1em 0;
 }
@@ -370,18 +45,133 @@ ul li {
   right: 0;
   bottom: 0;
   background: #292929;
-  z-index: 899;
+  z-index: 1002;
+  filter: alpha(opacity=85);
   -moz-opacity: 0.85;
   opacity: 0.85;
-  filter: alpha(opacity=85);
   -moz-transition: all ease 0.2s;
   -o-transition: all ease 0.2s;
   -webkit-transition: all ease 0.2s;
   transition: all ease 0.2s;
-  -webkit-transform: translate(-100%, 0);
-  -moz-transform: translate(-100%, 0);
-  -ms-transform: translate(-100%, 0);
-  -o-transform: translate(-100%, 0);
+  -webkit-transform: translate(100%, 0);
+  -moz-transform: translate(100%, 0);
+  -ms-transform: translate(100%, 0);
+  -o-transform: translate(100%, 0);
+}
+.account-details {
+  font-family: 'Roboto', sans-serif;
+  font-weight: 400;
+  text-align: left;
+  color: #fff;
+  position: absolute;
+  z-index: 1003;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  background: #292929;
+  border: none;
+  padding: 20px;
+  overflow: auto;
+  width: 100%;
+  max-width: 400px;
+  -moz-transition: all ease 0.2s;
+  -o-transition: all ease 0.2s;
+  -webkit-transition: all ease 0.2s;
+  transition: all ease 0.2s;
+  -webkit-transform: translate(100%, 0);
+  -moz-transform: translate(100%, 0);
+  -ms-transform: translate(100%, 0);
+  -o-transform: translate(100%, 0);
+  -webkit-transition-delay: 0.1s;
+  -moz-transition-delay: 0.1s;
+  -ms-transition-delay: 0.1s;
+  -o-transition-delay: 0.1s;
+}
+.account-details.open {
+  -webkit-transform: translate(0, 0);
+  -moz-transform: translate(0, 0);
+  -ms-transform: translate(0, 0);
+  -o-transform: translate(0, 0);
+}
+.account-details:after {
+  display: none;
+}
+.account-details a {
+  color: #fff;
+  border: none;
+}
+.account-details ul {
+  margin: 10px 0 0 0;
+  list-style: none;
+}
+.account-details .user-info p {
+  text-transform: none;
+}
+.account-details .user-info p .account-email {
+  font-family: 'Roboto';
+  font-weight: 300;
+}
+.account-details button {
+  display: block;
+  position: absolute;
+  overflow: hidden;
+  margin: 0;
+  padding: 0;
+  width: 40px;
+  height: 40px;
+  font-size: 0;
+  text-indent: -9999px;
+  border: none;
+  cursor: pointer;
+  background: none;
+  outline: none;
+  top: 20px;
+  right: 20px;
+}
+.account-details button :focus {
+  outline: none;
+}
+.account-details button:before,
+.account-details button:after {
+  position: absolute;
+  display: block;
+  top: 20px;
+  left: 0;
+  width: 100%;
+  height: 1px;
+  background-color: #fff;
+  content: "";
+  -moz-transition: all linear 0.1s;
+  -o-transition: all linear 0.1s;
+  -webkit-transition: all linear 0.1s;
+  transition: all linear 0.1s;
+}
+.account-details button:before {
+  -webkit-transform: rotate(45deg);
+  -moz-transform: rotate(45deg);
+  -ms-transform: rotate(45deg);
+  -o-transform: rotate(45deg);
+}
+.account-details button:after {
+  -webkit-transform: rotate(-45deg);
+  -moz-transform: rotate(-45deg);
+  -ms-transform: rotate(-45deg);
+  -o-transform: rotate(-45deg);
+}
+.account-details button:hover:before {
+  -webkit-transform: rotate(0deg);
+  -moz-transform: rotate(0deg);
+  -ms-transform: rotate(0deg);
+  -o-transform: rotate(0deg);
+}
+.account-details button:hover:after {
+  -webkit-transform: rotate(0deg);
+  -moz-transform: rotate(0deg);
+  -ms-transform: rotate(0deg);
+  -o-transform: rotate(0deg);
+  filter: alpha(opacity=0);
+  -moz-opacity: 0;
+  opacity: 0;
 }
 body.panel-open {
   overflow: hidden;
@@ -395,7 +185,7 @@ body.panel-open .hub-overlay {
 /* Group Bar */
 .super-group-bar {
   background: #f8f8f8;
-  z-index: 999;
+  z-index: 1001;
   font-family: 'Ubuntu', sans-serif;
   font-weight: 400;
   text-rendering: optimizeLegibility;
@@ -448,7 +238,7 @@ body.panel-open .hub-overlay {
   .super-group-bar .content .branding .poweredby {
     font-size: 1rem;
     margin: 0 0 0 20px;
-    line-height: 3rem;
+    line-height: 44px;
     letter-spacing: -1px;
   }
   .super-group-bar .content .branding .poweredby span {
@@ -487,13 +277,13 @@ body.panel-open .hub-overlay {
   left: 0;
   top: 0;
   text-transform: none;
-  font-family: 'tornado';
+  font-family: 'Fontcons';
   font-size: 1rem;
   line-height: 2rem;
-  content: 'a';
-  -webkit-transition: all linear 0.2s;
+  content: '\f007';
   -moz-transition: all linear 0.2s;
   -o-transition: all linear 0.2s;
+  -webkit-transition: all linear 0.2s;
   transition: all linear 0.2s;
 }
 .super-group-bar .content .subnav > li > a.icon:hover {
@@ -508,10 +298,10 @@ body.panel-open .hub-overlay {
 }
 @media (min-width: 520px) {
   .super-group-bar .content .subnav > li > a {
-    line-height: 3rem;
+    line-height: 44px;
   }
   .super-group-bar .content .subnav > li > a.icon.user-account-link:before {
-    line-height: 3rem;
+    line-height: 44px;
   }
 }
 .super-group-bar .content .subnav a {
@@ -520,128 +310,6 @@ body.panel-open .hub-overlay {
 }
 .super-group-bar .content .subnav li {
   list-style: none;
-}
-.super-group-bar .content .subnav .user-account .account-details {
-  font-family: 'Roboto', sans-serif;
-  font-weight: 400;
-  text-align: left;
-  color: #fff;
-  position: absolute;
-  z-index: 900;
-  top: 0;
-  right: 0;
-  left: 0;
-  bottom: 0;
-  background: #292929;
-  border: none;
-  padding: 25px;
-  overflow: auto;
-  max-width: 400px;
-  -moz-transition: all ease 0.2s;
-  -o-transition: all ease 0.2s;
-  -webkit-transition: all ease 0.2s;
-  transition: all ease 0.2s;
-  -webkit-transform: translate(-100%, 0);
-  -moz-transform: translate(-100%, 0);
-  -ms-transform: translate(-100%, 0);
-  -o-transform: translate(-100%, 0);
-  -ms-transition-delay: 0.1s;
-  -webkit-transition-delay: 0.1s;
-  -moz-transition-delay: 0.1s;
-  -o-transition-delay: 0.1s;
-  transition-delay: 0.1s;
-}
-.super-group-bar .content .subnav .user-account .account-details.open {
-  -webkit-transform: translate(0, 0);
-  -moz-transform: translate(0, 0);
-  -ms-transform: translate(0, 0);
-  -o-transform: translate(0, 0);
-}
-.super-group-bar .content .subnav .user-account .account-details:after {
-  display: none;
-}
-.super-group-bar .content .subnav .user-account .account-details a {
-  color: #fff;
-  border: none;
-}
-.super-group-bar .content .subnav .user-account .account-details a:hover {
-  color: #4390b5;
-}
-.super-group-bar .content .subnav .user-account .account-details ul {
-  margin: 10px 0 0 0;
-}
-.super-group-bar .content .subnav .user-account .account-details .user-info p {
-  text-transform: none;
-}
-.super-group-bar .content .subnav .user-account .account-details .user-info p .account-email {
-  font-family: 'Roboto';
-  font-weight: 300;
-}
-.super-group-bar .content .subnav .user-account .account-details button {
-  display: block;
-  position: absolute;
-  overflow: hidden;
-  margin: 0;
-  padding: 0;
-  width: 40px;
-  height: 40px;
-  font-size: 0;
-  text-indent: -9999px;
-  border: none;
-  cursor: pointer;
-  background: none;
-  outline: none;
-  top: 25px;
-  right: 25px;
-}
-.super-group-bar .content .subnav .user-account .account-details button :focus {
-  outline: none;
-}
-.super-group-bar .content .subnav .user-account .account-details button:before,
-.super-group-bar .content .subnav .user-account .account-details button:after {
-  position: absolute;
-  display: block;
-  top: 20px;
-  left: 0;
-  width: 100%;
-  height: 1px;
-  background-color: #ffffff;
-  content: "";
-  -webkit-transition: all linear 0.1s;
-  -moz-transition: all linear 0.1s;
-  -o-transition: all linear 0.1s;
-  transition: all linear 0.1s;
-}
-.super-group-bar .content .subnav .user-account .account-details button:before {
-  -webkit-transform: rotate(45deg);
-  -moz-transform: rotate(45deg);
-  -ms-transform: rotate(45deg);
-  -o-transform: rotate(45deg);
-  transform: rotate(45deg);
-}
-.super-group-bar .content .subnav .user-account .account-details button:after {
-  -webkit-transform: rotate(-45deg);
-  -moz-transform: rotate(-45deg);
-  -ms-transform: rotate(-45deg);
-  -o-transform: rotate(-45deg);
-  transform: rotate(-45deg);
-}
-.super-group-bar .content .subnav .user-account .account-details button:hover:before {
-  -webkit-transform: rotate(0deg);
-  -moz-transform: rotate(0deg);
-  -ms-transform: rotate(0deg);
-  -o-transform: rotate(0deg);
-  transform: rotate(0deg);
-}
-.super-group-bar .content .subnav .user-account .account-details button:hover:after {
-  -webkit-transform: rotate(0deg);
-  -moz-transform: rotate(0deg);
-  -ms-transform: rotate(0deg);
-  -o-transform: rotate(0deg);
-  transform: rotate(0deg);
-  -moz-opacity: 0;
-  opacity: 0;
-  filter: alpha(opacity=0);
 }
 .super-group-bar .content .subnav .subnav-membership .group-dash {
   font-family: 'Roboto', sans-serif;
@@ -656,7 +324,7 @@ body.panel-open .hub-overlay {
   bottom: 0;
   background: #292929;
   border: none;
-  padding: 25px;
+  padding: 20px;
   overflow: auto;
   max-width: 400px;
   -moz-transition: all ease 0.2s;
@@ -667,11 +335,10 @@ body.panel-open .hub-overlay {
   -moz-transform: translate(-100%, 0);
   -ms-transform: translate(-100%, 0);
   -o-transform: translate(-100%, 0);
-  -ms-transition-delay: 0.1s;
   -webkit-transition-delay: 0.1s;
   -moz-transition-delay: 0.1s;
+  -ms-transition-delay: 0.1s;
   -o-transition-delay: 0.1s;
-  transition-delay: 0.1s;
 }
 .super-group-bar .content .subnav .subnav-membership .group-dash.open {
   -webkit-transform: translate(0, 0);
@@ -685,9 +352,6 @@ body.panel-open .hub-overlay {
 .super-group-bar .content .subnav .subnav-membership .group-dash a {
   color: #fff;
   line-height: 1.4em;
-}
-.super-group-bar .content .subnav .subnav-membership .group-dash a:hover {
-  color: #4390b5;
 }
 .super-group-bar .content .subnav .subnav-membership .group-dash a span {
   text-transform: none;
@@ -736,8 +400,8 @@ body.panel-open .hub-overlay {
   cursor: pointer;
   background: none;
   outline: none;
-  top: 25px;
-  right: 25px;
+  top: 20px;
+  right: 20px;
 }
 .super-group-bar .content .subnav .subnav-membership .group-dash button :focus {
   outline: none;
@@ -750,11 +414,11 @@ body.panel-open .hub-overlay {
   left: 0;
   width: 100%;
   height: 1px;
-  background-color: #ffffff;
+  background-color: #fff;
   content: "";
-  -webkit-transition: all linear 0.1s;
   -moz-transition: all linear 0.1s;
   -o-transition: all linear 0.1s;
+  -webkit-transition: all linear 0.1s;
   transition: all linear 0.1s;
 }
 .super-group-bar .content .subnav .subnav-membership .group-dash button:before {
@@ -762,31 +426,27 @@ body.panel-open .hub-overlay {
   -moz-transform: rotate(45deg);
   -ms-transform: rotate(45deg);
   -o-transform: rotate(45deg);
-  transform: rotate(45deg);
 }
 .super-group-bar .content .subnav .subnav-membership .group-dash button:after {
   -webkit-transform: rotate(-45deg);
   -moz-transform: rotate(-45deg);
   -ms-transform: rotate(-45deg);
   -o-transform: rotate(-45deg);
-  transform: rotate(-45deg);
 }
 .super-group-bar .content .subnav .subnav-membership .group-dash button:hover:before {
   -webkit-transform: rotate(0deg);
   -moz-transform: rotate(0deg);
   -ms-transform: rotate(0deg);
   -o-transform: rotate(0deg);
-  transform: rotate(0deg);
 }
 .super-group-bar .content .subnav .subnav-membership .group-dash button:hover:after {
   -webkit-transform: rotate(0deg);
   -moz-transform: rotate(0deg);
   -ms-transform: rotate(0deg);
   -o-transform: rotate(0deg);
-  transform: rotate(0deg);
+  filter: alpha(opacity=0);
   -moz-opacity: 0;
   opacity: 0;
-  filter: alpha(opacity=0);
 }
 @keyframes colorWheel {
   0% {
@@ -807,11 +467,4 @@ body.panel-open .hub-overlay {
   100% {
     color: #00a1e4;
   }
-}
-@font-face {
-  font-family: 'tornado';
-  src: url('/app/templates/NaN/fonts/tornado/tornado.eot');
-  src: url('/app/templates/NaN/fonts/tornado/tornado.eot?#iefix') format('embedded-opentype'), url('/app/templates/NaN/fonts/tornado/tornado.woff') format('woff'), url('/app/templates/NaN/fonts/tornado/tornado.ttf') format('truetype'), url('/app/templates/NaN/fonts/tornado/tornado.svg#tornado') format('svg');
-  font-weight: normal;
-  font-style: normal;
 }
