--- a/templates/bmc/css/group_core.css
+++ b/templates/bmc/css/group_core.css
@@ -151,6 +151,14 @@ img.align-left {
   opacity: 0;
   filter: alpha(opacity=0);
 }
+@font-face {
+  font-family: 'Fontcons';
+  font-display: block;
+  src: url('/core/assets/css/fonts/fontcons-webfont.eot');
+  src: url('/core/assets/css/fonts/fontcons-webfont.eot?#iefix') format('embedded-opentype'), url('/core/assets/css/fonts/fontcons-webfont.woff') format('woff'), url('/core/assets/css/fonts/fontcons-webfont.ttf') format('truetype'), url('/core/assets/css/fonts/fontcons-webfont.svg#FontconsRegular') format('svg');
+  font-weight: normal;
+  font-style: normal;
+}
 html,
 body,
 div,
@@ -374,5 +382,5 @@ a,
 a:active,
 a:visited {
   text-decoration: none;
-  color: #08c;
+  color: #6E9C39;
 }
